# user-management

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  run_linting.sh  test_grpc.py  test_rest.py
api/config/: auth.py  db.py
api/grpc/: grpc_service.py
api/grpc/proto/: user.proto  user_pb2.py  user_pb2_grpc.py
api/rest_api/: main.py  models.py  routes.py
sdk/: grpc_client.py  rest_client.py
